# game_math_lib

./: CMakeLists.txt  LICENSE.txt
lib/: CMakeLists.txt
lib/include/: game_math.h
lib/src/: game_math.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
